# avesta

./: README.md  __init__.py  pyproject.toml  sample_usage.py  similarity.py
.github/workflows/: ci-cd.yml  publish.yml  release.yml
preprocess/: __init__.py  preprocessing.py
resources/: __init__.py  stopwords.py
resources/synonym/: ecom_synonyms.csv
tests/: __init__.py  cbs_test.py  lexical_sim_test.py  semantic_sim_test.py
tools/: __init__.py  stemmers.py  torob_handler.py
tools/similarity/: __init__.py  cbs.py  lexical_sim.py  semantic_sim.py
tools/spell_checker/: whitespace_handler.py
