[tool.poetry]
name = "avesta"
version = "0.19"
description = "A Python library for text processing"
authors = ["Majid Fahandezi Sadi <mfsadi.work@gmail.com>"]
license = "MIT"
repository = "https://github.com/mfsadi/avesta"

[tool.poetry.dependencies]
python = "^3.10"
tqdm = "4.66.2"
Levenshtein = "0.25.0"
PersianStemmer = "1.0.0"
pandas = "2.2.0"
nltk = "3.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
